# yinchi.github.io

./: .gitignore  404.html  README.md  _config.yml  code.sh  ieee-with-url.csl  index.html  mkdocs.yml  publications.ipynb  publications.py  pyproject.toml  yinchi.bib
_data/: navigation.yml
_includes/: archive-single-cv.html  archive-single-talk.html  archive-single.html  author-profile.html  sitemap-post.html  sitemap-pub.html
_layouts/: single.html
_pages/: 404.md  about.md  cv.md  links.md  publications.md  sitemap.md  talks.html
_portfolio/: 01-harvardx-movielens.md  02-harvardx-higgs.md  03-simpy-examples.md
_posts/: 2012-08-14-blog-post-1.md  2023-12-11-salabim.md  2024-04-01-software.md  2024-06-02-software2.md
_preprints/: 2023-01-24-wong2023_preprint.md  2023-05-23-preprint_asoc.md  2023-08-28-niu2023_preprint.md  2024-05-14-moretti2024_preprint.md
_publications/: 2015-04-26-chan2015_infocom.md  2016-07-07-chan2016_peva.md  2016-10-31-chan2016_peva.md  2017-07-28-chan2017_hcms.md  2017-12-04-wu2017_globecom.md  2017-12-18-chan2018_tcom.md  2018-05-31-chan2018_tcom.md  2018-12-31-chan2018_hcms.md  2020-05-11-wu2020_hpsr.md  2020-06-05-wu2020_tgcn.md  2020-10-20-niu2020_access.md  2020-12-31-wu2020_tgcn.md  2021-01-18-chan2021_comml.md  2021-05-31-chan2021_comml.md  2021-06-03-niu2021_nody.md  2021-07-06-niu2021_nody.md  2022-07-06-niu2022_viruses.md  2022-07-06-wang2022_viruses.md  2023-06-07-wong2023_access.md  2023-07-10-mukherjee2023_ec3.md  2023-09-25-moretti2023_lodisa.md  2023-12-13-chan2023_wsc.md  2023-12-29-chan2023_asoc.md
cv/: index.html
(+35 files in other folders)
