[project]
name = "personal"
version = "0.1.0"
description = "Yin-Chi Chan's personal website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-bibtex>=4.2.5",
    "mkdocs-material>=9.6.11",
    "mkdocs-open-in-new-tab>=1.0.8",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
